--- a/style.css
+++ b/style.css
@@ -1,18 +1,22 @@
 body {
-    margin: 0; /* Убираем отступы */
-    height: 100%; /* Высота страницы */
-    background: url(home.jpg); /* Параметры фона */
-    background-size: cover; /* Фон занимает всю доступную площадь */
+    margin: 0; 
+    height: 100%; 
+    background: url(home.jpg); 
+    background-size: cover; 
    }
   p {
-    margin-top: 5em; /* Отступ сверху */
-    margin-bottom: 1em; /* Отступ снизу */
+    margin-top: 7em; 
+    margin-bottom: 1em; 
    }
   h1 {
-margin-top: 1em; /* Отступ сверху */
-    margin-bottom: 1em; /* Отступ снизу */
+margin-top: 1em; 
+    margin-bottom: 1em; 
 }
 p1 {
 color: white;
 font-size:30px;
+}
+p6{
+color:white;
+font-size:40px;
 }
