--- a/styleabout.css
+++ b/styleabout.css
@@ -1,16 +1,16 @@
 body {
-    margin: 0; /* Убираем отступы */
-    height: 100%; /* Высота страницы */
-    background: url(about.jpg); /* Параметры фона */
-    background-size: cover; /* Фон занимает всю доступную площадь */
+    margin: 0; 
+    height: 100%; 
+    background: url(about.jpg); 
+    background-size: cover; 
    }
   p {
-    margin-top: 4em; /* Отступ сверху */
-    margin-bottom: 1em; /* Отступ снизу */
+    margin-top: 4em; 
+    margin-bottom: 1em; 
    }
   h1 {
-margin-top: 1em; /* Отступ сверху */
-    margin-bottom: 1em; /* Отступ снизу */
+margin-top: 1em; 
+    margin-bottom: 1em; 
 }
 p1 {
 color: white;
