--- a/stylecontact.css
+++ b/stylecontact.css
@@ -1,18 +1,18 @@
 body {
-    margin: 0; /* Убираем отступы */
-    height: 100%; /* Высота страницы */
-    background: url(contact.jpg); /* Параметры фона */
-    background-size: cover; /* Фон занимает всю доступную площадь */
+    margin: 0; 
+    height: 100%; 
+    background: url(contact.jpg); 
+    background-size: cover; 
    }
   p {
-    margin-top: 4em; /* Отступ сверху */
-    margin-bottom: 1em; /* Отступ снизу */
+    margin-top: 4em; 
+    margin-bottom: 1em; 
    }
   h1 {
-margin-left: 5em; /* Отступ сверху */
+margin-left: 5em; 
 }
 h2{
-    margin-top: 1em; /* Отступ сверху */
+    margin-top: 1em; 
 }
 p1 {
 color: white;
