--- a/stylemore.css
+++ b/stylemore.css
@@ -1,16 +1,16 @@
 body {
-    margin: 0; /* Убираем отступы */
-    height: 100%; /* Высота страницы */
-    background: url(home.jpg); /* Параметры фона */
-    background-size: cover; /* Фон занимает всю доступную площадь */
+    margin: 0; 
+    height: 100%; 
+    background-color: white; 
+    background-size: cover; 
    }
   p {
-    margin-top: 2em; /* Отступ сверху */
-    margin-bottom: 1em; /* Отступ снизу */
+    margin-top: 2em; 
+    margin-bottom: 1em; 
 p4 {
  
-    margin-top: 8em; /* Отступ сверху */
-    margin-bottom: 1em; /* Отступ снизу */
+    margin-top: 8em; 
+    margin-bottom: 1em; 
    
 color: white;
 font-size:70px;
@@ -18,19 +18,19 @@ font-size:70px;
 }
    }
   h1 {
-margin-top: 1em; /* Отступ сверху */
-    margin-bottom: 1em; /* Отступ снизу */
+margin-top: 1em; 
+    margin-bottom: 1em; 
 }
 p1 {
-color: white;
+color: black;
 font-size:30px;
 }
 p2 {
-color: white;
+color: black;
 font-size:40px;
 font-weight: bold
 }
 p3 {
-color: white;
+color: black;
 font-size:30px;
 }
